--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "ejs": "^2.4.2",
-    "express": "^4.13.4",
+    "ejs": "^2.5.5",
+    "express": "^4.14.0",
+    "express-validation": "^1.0.1",
+    "joi": "^10.1.0",
     "pg": "^5.1.0"
   },
   "devDependencies": {},
